# spatialconv_neural_speech_decoding

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: README.md  default.yaml  lopo_ce.yaml  lopo_medium_smoke.yaml  lopo_pilot.yaml  per_patient.yaml  per_patient_ce_2layer.yaml  per_patient_ce_2layer_d64.yaml  per_patient_ce_c16_d128.yaml  per_patient_ce_h128.yaml  per_patient_ce_perpos.yaml  per_patient_ce_s10.yaml  per_patient_ce_s10_c16.yaml  per_patient_ce_s10_pool48.yaml  per_patient_flat.yaml  per_patient_phonological_aux.yaml  pretrain_base.yaml
docs/: README.md  current_direction.md  dcc_setup.md  experiment_log.md  future_directions.md  memo_for_zac.md  memo_for_zac.tex  neural_field_perceiver_v12.tex  paper_framing.md  physics_informed_architecture.tex  pipeline_decisions.md  reading_list.md  research_synthesis.md  training_log.md  v12_overview_for_greg.md  v12_overview_for_greg.tex  zac_meeting_2026_04_06.tex
pastwork/: paper_index.md  verification_results.md
scripts/: README.md  analyze_real_data_stats.py  brain_interactive.py  brain_interactive_expansion.py  ce_sweep.sh  diagnose_lopo.py  diagnose_regression.py  diagnostic_channel_mapping.py  diagnostic_data_quality.py  diagnostic_data_quality_dcc.sh  plot_brain_mne.py  plot_brain_surface.py  plot_electrodes_brain.py  plot_ve_coverage.py  plot_ve_expansion.py  run_grouped_baseline.py  run_phase0_baselines.py  sweep_full_recipe.py  sweep_full_recipe_dcc.sh  sweep_head_to_head.py  sweep_head_to_head_dcc.sh  sweep_multipatient.py  sweep_multipatient_dcc.sh  sweep_padding_dcc.sh  (+12 more)
(+307 files in other folders)
